# BoxPassword

./: .gitignore  BoxPassword_Design.docx  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
crates/bp-app/: Cargo.toml  tauri.conf.json
crates/bp-app/capabilities/: default.json
crates/bp-app/icons/: icon.icns
crates/bp-app/src/: commands.rs  keychain.rs  main.rs  state.rs
crates/bp-core/: Cargo.toml
crates/bp-core/src/: entry.rs  error.rs  lib.rs  policy.rs  version.rs
crates/bp-crypto/: Cargo.toml
crates/bp-crypto/src/: aead.rs  error.rs  kdf.rs  keys.rs  lib.rs  totp.rs
crates/bp-otp/: Cargo.toml
crates/bp-otp/src/: lib.rs
crates/bp-passgen/: Cargo.toml
crates/bp-passgen/src/: lib.rs  passphrase.rs  random.rs  strength.rs  wordlist.rs
crates/bp-storage/: Cargo.toml
crates/bp-storage/src/: lib.rs
docs/: FEATURES.md  SETUP_MAC.md  SETUP_WIN.md  TEST_CHECKLIST.md  USER_GUIDE.md
scripts/: build-release.ps1  build-release.sh  setup-mac.sh
ui/: index.html  quick.html
