[package]
name = "bp-core"
description = "BoxPassword domain types and use-cases"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
zeroize = { workspace = true }
