[package]
name = "bp-passgen"
description = "Password / passphrase generator with policy + zxcvbn strength wrapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
bp-core = { path = "../bp-core" }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
zxcvbn = { workspace = true }
